force-app/main/default/objects/RE_ExternalQuoteMapping__c/RE_ExternalQuoteMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE_ExternalQuoteMapping</label>
</CustomObject>