force-app/main/default/objects/RE_ExternalQuoteMapping__c/fields/External_Quotation_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Quotation_Number__c</fullName>
    <label>External Quotation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>