force-app/main/default/objects/RE_ExternalQuoteMapping__c/fields/External_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Quote_Type__c</fullName>
    <label>External Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>