force-app/main/default/objects/RE_ExternalQuoteMapping__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>