force-app/main/default/objects/RE_ExternalQuoteMapping__c/fields/RE_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Name__c</fullName>
    <label>RE_Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>