force-app/main/default/objects/RE_ExternalQuoteMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Quotation_Number__c</columns>
    <columns>External_Quote_Source__c</columns>
    <columns>External_Quote_Type__c</columns>
    <columns>RE_Quote_Name__c</columns>
    <columns>RE_Quote_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RE_Multiplier__c</columns>
    <columns>RE_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>